// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`rendering renders correctly 1`] = `
<div
  className="q20_node__string--dropdownWidget"
>
  <select
    className="q20_node__thisTestDropdown--dropdownField"
    onChange={[Function]}
    type="select"
    value={undefined}
  >
    <option
      value=""
    >
      test label
    </option>
    <option
      value="hello"
    >
      hello
    </option>
    <option
      value="world"
    >
      world
    </option>
  </select>
</div>
`;

exports[`rendering renders correctly with no label supplied 1`] = `
<div
  className="q20_node__string--dropdownWidget"
>
  <select
    className="q20_node__thisTestDropdown--dropdownField"
    onChange={[Function]}
    type="select"
    value={undefined}
  >
    <option
      value="hello"
    >
      hello
    </option>
    <option
      value="world"
    >
      world
    </option>
  </select>
</div>
`;

exports[`rendering renders correctly with no options supplied 1`] = `
<div
  className="q20_node__string--dropdownWidget"
>
  <select
    className="q20_node__thisTestDropdown--dropdownField"
    onChange={[Function]}
    type="select"
    value={undefined}
  >
    <option
      value=""
    >
      test label
    </option>
  </select>
</div>
`;
